--- a/public/styles/fonts.css
+++ b/public/styles/fonts.css
@@ -4,6 +4,7 @@
          url('/styles/fonts/worksans-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: 'work_sansregular';
@@ -11,6 +12,7 @@
          url('/styles/fonts/worksans-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: 'work_sanssemibold';
@@ -18,6 +20,7 @@
          url('/styles/fonts/worksans-semibold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
@@ -56,7 +59,7 @@ body {
   hyphens: auto;
   font-size:1em;
 }
- 
+
 h1,
 .shopname {
     font-size:2rem;
