--- a/public/styles/fonts/stylesheet.css
+++ b/public/styles/fonts/stylesheet.css
@@ -8,6 +8,7 @@
          url('worksans-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 
 }
 
@@ -20,6 +21,7 @@
          url('worksans-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 
 }
 
@@ -32,5 +34,6 @@
          url('worksans-semibold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 
 }
