--- a/public/styles/tablet.css
+++ b/public/styles/tablet.css
@@ -142,7 +142,7 @@ footer .inner .kontakt
     display:flex;
     max-width:100%;
     justify-content:left;
-    align-items:top;
+    align-items:normal;
     flex-wrap:wrap;
 }
 .item_detail {
@@ -725,8 +725,8 @@ img{
   border-radius:5px;
   padding: 15px;
   color: #FFFFFF;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
 }
 .login-form_mobile button:hover,
@@ -1375,7 +1375,7 @@ img{
         float: right;
         margin: 0;
         padding: 0;
-        width:100!important;
+        width:100%!important;
     }
     .basketButton {
         background-color:#b81d19;
